<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="16dp">

  <TextView
    android:id="@+id/tvSelectFilter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:text="@string/text_select_filter"
    android:textColor="@android:color/black"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Spinner
    android:id="@+id/filterSpinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tvSelectFilter" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvReviews"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:visibility="gone"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/filterSpinner"
    tools:itemCount="2"
    tools:listitem="@layout/item_user_survey" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layoutEmptyView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:id="@+id/imgSad"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:contentDescription="@string/desc_sad_image"
      android:src="@drawable/ic_extreme_sad"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/text_no_surveys_found"
      android:textColor="@android:color/black"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="@id/imgSad"
      app:layout_constraintStart_toStartOf="@id/imgSad"
      app:layout_constraintTop_toBottomOf="@id/imgSad" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>